Реализация эндпоинта добавления сообщений для centrifugo коньсюмера
