# backend/api/openapi.yaml
@@ -78,6 +78,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
+  /message:
+    post:
+      summary: Добавление сообщения
+      description: Добавление сообщения пользователя
+      tags:
+        - Сообщение
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AddMessageRequest'
+      responses:
+        '201':
+          description: Сообщение успешно добавленно
+        '400':
+          description: Не валидные данные запроса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Внутреняя ошибка сервера, обратитесь к администратору
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
 #  /users/{id}:
 #    get:
 #      summary: Get a users by ID
@@ -141,6 +169,7 @@ components:
         id:
           type: string
           format: uuid
+
     AuthUserRequest:
       type: object
       required:
@@ -160,6 +189,38 @@ components:
       properties:
         token:
           type: string
+
+    MessageDataRequest:
+      type: object
+      required:
+        - userId
+        - userName
+        - message
+      properties:
+        userId:
+          type: integer
+          format: int64
+        userName:
+          type: string
+          minLength: 4
+          maxLength: 100
+        message:
+          type: string
+          minLength: 4
+          maxLength: 500
+    AddMessageRequest:
+      type: object
+      required:
+        - channel
+        - data
+      properties:
+        channel:
+          type: string
+          minLength: 2
+          maxLength: 100
+        data:
+          $ref: '#/components/schemas/MessageDataRequest'
+
     ErrorResponse:
       type: object
       properties:
